--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,11 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+//       testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        //for hilt
+        testInstrumentationRunner "com.basemibrahim.redditnews.CustomTestRunner"
+
     }
 
     buildTypes {
@@ -51,9 +55,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+   // testImplementation 'junit:junit:4.+'
+   // androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+   // androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     def activity_version = "1.1.0"
@@ -90,7 +94,7 @@ dependencies {
     //for image rendering
     implementation "io.coil-kt:coil:$coilVersion"
 
-
+    //navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
@@ -99,6 +103,18 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
+    //Testing
+    androidTestImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.test:core-ktx:1.4.0"
+    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.3"
+    androidTestImplementation "androidx.test:rules:1.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.2'
 
+
+    // Hilt testing dependency
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+    // Make Hilt generate code in the androidTest folder
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
 
 }
